[project]
name = "ai_blog_app"
version = "0.1.0"
description = "An AI-powered blog application"
authors = [
    { name = "edilma" }
]
dependencies = [
    "autogen-agentchat",
    "autogen-ext[openai]",
    "openai"
]

requires-python = ">=3.10"

[tool.uv]
python = "3.10"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

